# webx

./: Cargo.toml  README.md
assets/: logo.pdn
examples/todo/: index.html  index.webx  index.wx  run.bat  webx.config.json
examples/todo/assets/: site.webmanifest
examples/todo/webx/: index.webx
schemas/: webx.config.schema.json
src/: main.rs  project.rs  runner.rs
src/analysis/: dependencies.rs  routes.rs
src/analytics/: dependencies.rs  mod.rs  routes.rs
src/engine/: filewatcher.rs  http.rs  mod.rs  runner.rs  runtime.rs  server.rs  stdlib.js  stdlib.rs  test.rs
src/file/: mod.rs  parser.rs  project.rs  webx.rs
src/reporting/: debug.rs  error.rs  mod.rs  route.rs  warning.rs
