[package]
name = "webx"
version = "1.0.0"
edition = "2021"
description = "A language and framework for building web server backends."
authors = ["William Rågstad"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.3.21", features = ["color"] }
colored = "2.0.4"
http = "0.2.9"
notify = "6.1.1"
regex = "1.10.1"
serde = { version = "1.0.183", features = ["derive"]}
serde_json = "1.0.104"
